[tool.poetry]
name = "pyphluence"
version = "0.1.0"
description = "Confluence API python library"
authors = ["Paul Mulgrew <pmulgrew@live.com>"]
readme = "README.md"
packages = [
    { include = "pyphluence", from = "." },
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
